height fix on mobile view download section

--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -618,7 +618,7 @@
             
             transition: .45s ease all; 
             @include for-mobile{
-                min-height: 300px;
+                min-height: 370px;
             }
 
         }
